// prisma/schema.prisma

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "sqlite" // or "postgresql", "mysql", etc.
  url      = env("DATABASE_URL")
}
model Student {
  id          String       @id @default(cuid())
  name        String
  email       String       @unique
  gpa         Float?
  enrollments Enrollment[] // 👈 relation through join table
}

model Course {
  id           String       @id @default(cuid())
  title        String
  category     String
  instructor   Instructor?  @relation(fields: [instructorId], references: [id])
  instructorId String?
  enrollments  Enrollment[]
}

model Instructor {
  id      String   @id @default(cuid())
  name    String
  email   String   @unique
  courses Course[]
}

model Enrollment {
  id        String  @id @default(cuid())
  student   Student @relation(fields: [studentId], references: [id])
  studentId String
  course    Course  @relation(fields: [courseId], references: [id])
  courseId  String
  grade     Float?
}
